feat: add snapshot import API
